<resources>
    <string name="app_name">tittytainment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="select_an_avatar">Select an Avatar</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">sign up</string>
    <string name="profile_name_1">Ali Connors</string>
    <string name="profile_image">Profile image</string>
    <string name="user_points">10,000 pts</string>
    <string name="user_rank">#1</string>
    <string name="rank">Rank</string>
    <string name="rank_1">#1</string>
    <string name="wins">Wins</string>
    <string name="wins_amount">42</string>
    <string name="losses">Losses</string>
    <string name="losses_amount">03</string>
    <string name="about">About</string>
    <string name="welcome">Welcome!</string>
    <string name="about_description">This sample showcases navigation using a Bottom Navigation
    View. The state and back stack of the three different screens are persisted.
    </string>
    <string name="done">Done</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_register">Register</string>
    <string name="title_registered">Registered</string>
    <string name="title_list">Leaderboard</string>
    <string name="title_detail">Profile</string>
    <string name="cd_home">Home</string>
    <string name="cd_list">List</string>
    <string name="cd_form">Form</string>


    <!--    -->


    <string name="nav_home">首页</string>
    <string name="nav_message">消息</string>
    <string name="nav_bbs">社区</string>
    <string name="nav_profile">我的</string>


    <string name="hint_phone">手机号</string>
    <string name="hint_sms">验证码</string>
    <string name="hint_password">密码</string>

    <string name="account_login">登录</string>
    <string name="account_register">注册</string>
    <string name="account_sms">验证码</string>
    <string name="account_has_send">已发送</string>

    <string name="account_go_password">密码登录</string>
    <string name="account_go_sms">短信登录</string>
    <string name="account_go_register">没有账户?现在注册</string>
    <string name="account_go_login">返回登录</string>

    <string name="error_empty_phone">手机号不能为空</string>
    <string name="error_empty_password">密码不能为空</string>
    <string name="error_empty_sms">验证码不能为空</string>

    <string name="toast_sms_has_send">验证码已发送, 请注意查收</string>


</resources>